--- a/vaccination_data.ipynb
+++ b/vaccination_data.ipynb
@@ -6,7 +6,7 @@
       "name": "vaccination_data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOaUBkxMoeqD/VfZkI8K7g1",
+      "authorship_tag": "ABX9TyMLhLsAn9ag65KEOBunDZwh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -18978,22 +18978,138 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!zip -r vaccination_data_county.zip vaccination_data_county"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0Knl_UdjwLOO",
-        "outputId": "62cf496f-fc5f-4a95-c2fd-3451f7c31838"
+        "outputId": "fb9ba53e-b92a-43cd-e4d0-4d2da434ea24"
       },
-      "execution_count": 23,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "defaultdict(<class 'list'>, {})\n"
+            "  adding: vaccination_data_county/ (stored 0%)\n",
+            "  adding: vaccination_data_county/vaccination_data_NC.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Washington.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_UT.csv (deflated 68%)\n",
+            "  adding: vaccination_data_county/vaccination_data_CA.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Alaska.csv (deflated 67%)\n",
+            "  adding: vaccination_data_county/vaccination_data_PA.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_ND.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_New Jersey.csv (deflated 68%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MN.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_DE.csv (deflated 47%)\n",
+            "  adding: vaccination_data_county/vaccination_data_TX.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_New Mexico.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MP.csv (deflated 22%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Virgin Islands.csv (deflated 51%)\n",
+            "  adding: vaccination_data_county/vaccination_data_NY.csv (deflated 69%)\n",
+            "  adding: vaccination_data_county/vaccination_data_PW.csv (deflated 23%)\n",
+            "  adding: vaccination_data_county/vaccination_data_VA.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Idaho.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_FL.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MA.csv (deflated 62%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Oklahoma.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_ID.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_NE.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Maryland.csv (deflated 68%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Alabama.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_None.csv (deflated 52%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Arizona.csv (deflated 65%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MD.csv (deflated 65%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Louisiana.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Arkansas.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_VT.csv (deflated 63%)\n",
+            "  adding: vaccination_data_county/vaccination_data_North Dakota.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_IL.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Puerto Rico.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Florida.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MS.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_South Dakota.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_American Samoa.csv (deflated 23%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Wyoming.csv (deflated 69%)\n",
+            "  adding: vaccination_data_county/vaccination_data_West Virginia.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Massachusetts.csv (deflated 67%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Colorado.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MI.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_AZ.csv (deflated 63%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Nevada.csv (deflated 66%)\n",
+            "  adding: vaccination_data_county/vaccination_data_NJ.csv (deflated 65%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Nebraska.csv (deflated 77%)\n",
+            "  adding: vaccination_data_county/vaccination_data_IA.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_North Carolina.csv (deflated 76%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Mississippi.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_New Hampshire.csv (deflated 63%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Georgia.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_ME.csv (deflated 63%)\n",
+            "  adding: vaccination_data_county/vaccination_data_OR.csv (deflated 69%)\n",
+            "  adding: vaccination_data_county/vaccination_data_FM.csv (deflated 22%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Tennessee.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_NH.csv (deflated 59%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Delaware.csv (deflated 48%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Iowa.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_VI.csv (deflated 46%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Kansas.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Minnesota.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_TN.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_NV.csv (deflated 64%)\n",
+            "  adding: vaccination_data_county/vaccination_data_CT.csv (deflated 57%)\n",
+            "  adding: vaccination_data_county/vaccination_data_WA.csv (deflated 67%)\n",
+            "  adding: vaccination_data_county/vaccination_data_SC.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_HI.csv (deflated 60%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Michigan.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_NM.csv (deflated 67%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Montana.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Connecticut.csv (deflated 61%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Hawaii.csv (deflated 62%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Indiana.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/.ipynb_checkpoints/ (stored 0%)\n",
+            "  adding: vaccination_data_county/vaccination_data_California.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_AL.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MH.csv (deflated 22%)\n",
+            "  adding: vaccination_data_county/vaccination_data_OK.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Rhode Island.csv (deflated 56%)\n",
+            "  adding: vaccination_data_county/vaccination_data_WI.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Maine.csv (deflated 64%)\n",
+            "  adding: vaccination_data_county/vaccination_data_District of Columbia.csv (deflated 41%)\n",
+            "  adding: vaccination_data_county/vaccination_data_SD.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_PR.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Ohio.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MO.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Illinois.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_AR.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Oregon.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Kentucky.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_GU.csv (deflated 33%)\n",
+            "  adding: vaccination_data_county/vaccination_data_CO.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_OH.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Guam.csv (deflated 34%)\n",
+            "  adding: vaccination_data_county/vaccination_data_KS.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_South Carolina.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_MT.csv (deflated 71%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Virginia.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Utah.csv (deflated 69%)\n",
+            "  adding: vaccination_data_county/vaccination_data_LA.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Vermont.csv (deflated 65%)\n",
+            "  adding: vaccination_data_county/vaccination_data_WY.csv (deflated 67%)\n",
+            "  adding: vaccination_data_county/vaccination_data_AK.csv (deflated 66%)\n",
+            "  adding: vaccination_data_county/vaccination_data_IN.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_KY.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_GA.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Missouri.csv (deflated 75%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Pennsylvania.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_WV.csv (deflated 70%)\n",
+            "  adding: vaccination_data_county/vaccination_data_New York.csv (deflated 72%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Texas.csv (deflated 74%)\n",
+            "  adding: vaccination_data_county/vaccination_data_DC.csv (deflated 32%)\n",
+            "  adding: vaccination_data_county/vaccination_data_Wisconsin.csv (deflated 73%)\n",
+            "  adding: vaccination_data_county/vaccination_data_RI.csv (deflated 52%)\n",
+            "  adding: vaccination_data_county/vaccination_data_AS.csv (deflated 22%)\n"
           ]
         }
       ]
